# Life

./: CMakeLists.txt  Readme.md  binary_state.cpp  binary_state.h  game_state.cpp  game_state.h  game_state_updater.cpp  game_state_updater.h  inputs_widget.cpp  inputs_widget.h  life_cell.cpp  life_cell.h  life_game.cpp  life_game.h  life_game_graphics_rect.cpp  life_game_graphics_rect.h  main.cpp  main_window.cpp  main_window.h
interfaces/: i_game_state_updater.h
